refactor Athena query handling: improve header detection logic with `getStartIndex`, update max results to 2, streamline row processing, and enhance pagination model initialization